<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/hello_world"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFA500"
        android:padding="10dp"
        android:text="@string/media_streamer"
        android:textColor="#ffdfeaf1"
        android:onClick="spotifyStreamer" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFA500"
        android:padding="10dp"
        android:text="@string/super_duo1"
        android:textColor="#ffdfeaf1"
        android:onClick="footballScoresApp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFA500"
        android:padding="10dp"
        android:text="@string/super_duo2"
        android:textColor="#ffdfeaf1"
        android:onClick="libraryApp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFA500"
        android:padding="10dp"
        android:text="@string/ant_terminator"
        android:textColor="#ffdfeaf1"
        android:onClick="buildItBiggerApp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFA500"
        android:padding="10dp"
        android:text="@string/materialize"
        android:textColor="#ffdfeaf1"
        android:onClick="xyzReaderApp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FF0000"
        android:padding="10dp"
        android:text="@string/capstone"
        android:textColor="#ffffff"
        android:onClick="capstoneClick" />

</RelativeLayout>
